add page inicio y todas sus modificaciones

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,3 +1,54 @@
+
+@font-face {
+  font-family: 'monalight';
+  src: url('/assets/font/Monasans/WOFF2/Mona-Sans-LightWide.woff2') format('woff2');
+  font-weight: light;
+  font-style: normal;
+}
+
+
+@font-face {
+  font-family: 'monaregular';
+  src: url('/assets/font/Monasans/WOFF2/Mona-Sans-RegularWide.woff2') format('woff2');
+  font-weight: regular;
+  font-style: normal;
+}
+
+
+@font-face {
+  font-family: 'monamedium';
+  src: url('/assets/font/Monasans/WOFF2/Mona-Sans-MediumWide.woff2') format('woff2');
+  font-weight: medium;
+  font-style: normal;
+}
+
+
+
+@font-face {
+  font-family: 'monasemibold';
+  src: url('/assets/font/Monasans/WOFF2/Mona-Sans-SemiBoldWide.woff2') format('woff2');
+  font-weight: semibold;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'monabold';
+  src: url('/assets/font/Monasans/WOFF2/Mona-Sans-BoldWide.woff2') format('woff2');
+  font-weight: bold;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'monaextrabold';
+  src: url('/assets/font/Monasans/WOFF2/Mona-Sans-ExtraBoldWide.woff2') format('woff2');
+  font-weight: Extrabold;
+  font-style: normal;
+}
+
+
+
+
+
 @font-face {
   font-family: "MargoBeuys";
   src: url(../assets/font/MargoBeuys.otf);
