--- a/sass/_inicio.scss
+++ b/sass/_inicio.scss
@@ -1,6 +1,547 @@
+.menu_i {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    border-bottom: 1px solid black;
 
-#canvasindex{
-    overflow-x: hidden;
-    width: 100vw;
+    .cont_logo {
+        padding-left: 2em;
+        filter: invert(100%);
+        scale: 0.8;
+    }
+
+    .cont_list_menu {
+
+        align-self: stretch;
+        flex-grow: 0;
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+        align-items: center;
+        padding: 0;
+
+        .boton_list_menu {
+            width: 10vw;
+            flex-grow: 0;
+            font-family: monalight;
+            font-size: 15px;
+            font-weight: lightw;
+            font-stretch: normal;
+            font-style: normal;
+            line-height: normal;
+            letter-spacing: normal;
+            text-align: center;
+            color: #000;
+            white-space: nowrap;
+
+        }
+
+        .boton_contactame {
+            align-self: stretch;
+            flex-grow: 1;
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            padding: 20px 30px;
+            background: #f32400;
+            flex-grow: 0;
+            font-family: monabold;
+            font-size: 15px;
+            font-weight: semibold;
+            font-stretch: normal;
+            font-style: normal;
+            line-height: normal;
+            letter-spacing: normal;
+            text-align: left;
+            color: #ffffff;
+        }
+    }
+
+}
+
+.seccion_inicio {
+    height: 90vh;
+    display: flex;
+    flex-direction: row;
+    overflow: hidden;
+    border-bottom: 1px solid black;
+
+    .cont_primera_columna_inicio {
+        width: 80vw;
+        border-right: #000 solid 1px;
+
+
+        .columna_titulo {
+            border-bottom: #000 solid 1px;
+            height: 75vh;
+            display: flex;
+            flex-direction: column;
+            align-items: start;
+            justify-content: center;
+            padding-left: 2em;
+            gap: 20px;
+
+            h1 {
+                font-family: monaextrabold;
+                font-size: 80px;
+                font-weight: bold;
+                font-stretch: normal;
+                font-style: normal;
+                line-height: 1;
+                letter-spacing: normal;
+                text-align: left;
+                color: #000;
+
+            }
+
+            p {
+
+                font-family: monaregular;
+                font-size: 15px;
+                font-weight: normal;
+                font-stretch: normal;
+                font-style: normal;
+                line-height: 1;
+                letter-spacing: normal;
+                text-align: left;
+                color: #000;
+
+            }
+
+            .boton_hablemos {
+                width: 150px;
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                align-items: flex-start;
+                gap: 10px;
+                padding: 20px 40px;
+                background-color: #f32400;
+
+                font-family: monabold;
+                font-size: 15px;
+                font-weight: 600;
+                font-stretch: normal;
+                font-style: normal;
+                line-height: 1;
+                letter-spacing: normal;
+                text-align: left;
+                color: #fff;
+            }
+        }
+
+        .cont_pie_titulo {
+            height: 15vh;
+            display: flex;
+            flex-direction: row;
+            width: 100%;
+            justify-content: space-between;
+
+            .contadores {
+                width: 100%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                border-left: #000000 solid 1px;
+
+                .cont_uno {
+
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    align-items: start;
+
+
+                    .valor_cont_uno {
+                        width: 100%;
+                        width: min-content;
+                        font-family: monabold;
+                        font-size: 30px;
+                        font-weight: 600;
+                        font-stretch: normal;
+                        font-style: normal;
+                        line-height: 1;
+                        letter-spacing: normal;
+                        text-align: start;
+                        color: #000;
+                    }
+
+                    .titulo_valor {
+                        font-family: monalight;
+                        font-size: 15px;
+                        font-weight: 300;
+                        font-stretch: normal;
+                        font-style: normal;
+                        line-height: 1;
+                        letter-spacing: normal;
+                        text-align: left;
+                        color: #000;
+                    }
+                }
+
+            }
+
+        }
+
+    }
+
+    .columna_video {
+        overflow: hidden;
+        width: 40vw;
+
+        img {
+            position: relative;
+            top: -5em;
+            width: 100%;
+        }
+    }
+}
+
+.cont_cinta_inicio {
+    width: 100%;
+
+    .slider_inicio {
+        height: 150px;
+        margin: 0px;
+        width: 100%;
+        display: flex;
+        align-items: start;
+        transform: rotate(0deg);
+        flex-shrink: 0;
+
+        overflow: hidden;
+        background: #f32400;
+        align-items: center;
+
+        .slide-track {
+            -webkit-animation: 60s linear infinite;
+            animation: 60s linear infinite;
+            animation-name: scroll10;
+            display: flex;
+            width: 8000px;
+            gap: 75px;
+            align-items: center;
+
+            .slide {
+                height: 50px;
+                width: auto;
+                display: flex;
+                align-items: center;
+                justify-content: end;
+
+                p {
+                    padding-top: 10px;
+                    padding-bottom: 10px;
+                    color: #ffffff;
+                    text-align: center;
+                    font-family: monabold;
+                    font-size: 95px;
+                    font-style: normal;
+                    font-weight: 300;
+                    line-height: 106%;
+                    white-space: nowrap;
+                }
+            }
+
+            .img_uno {
+                padding-top: 10px;
+                padding-bottom: 10px;
+                display: inline-block;
+                width: 100%;
+                height: 100px;
+                border-radius: 172px;
+            }
+
+        }
+    }
+}
+
+
+.cont_about_me_inicio {
     height: 100vh;
-  }
+    display: flex;
+    flex-direction: row;
+    overflow: hidden;
+
+    .colum_uno {
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        width: 50%;
+        align-items: center;
+        border-right: #000 1px solid;
+        justify-content: space-between;
+
+        .cinta_colum_uno {
+            width: 100%;
+            height: 10%;
+            background: #ffffff;
+            border-bottom: #000 solid 1px;
+            position: relative;
+            width: 100%;
+            overflow-x: hidden;
+            .slider_inicio {
+                    width: 100%;
+                    position: absolute;
+                    height: 100%;
+                    display: flex;
+                    align-items: start;
+                    flex-shrink: 0;
+                    overflow: hidden;
+                    background: #ffffff;
+                    align-items: center;
+
+        
+                    .slide-track {
+                        width: 100%;
+                        -webkit-animation: 10s linear infinite;
+                        animation: 15s linear infinite;
+                        animation-name: scroll101;
+                        display: flex;
+                        width: 2400px;
+                        align-items: start;
+                        gap: 1px;
+        
+                        .slide {
+                            height: 100%;
+                            width: 200px;
+                            display: flex;
+                            align-items: center;
+                            justify-content: center;
+        
+                            p {
+                                padding-top: 10px;
+                                padding-bottom: 10px;
+                                color: #000;
+                                text-align: center;
+                                font-family: monaextrabold;
+                                font-size: 18px;
+                                font-style: normal;
+                                line-height: 106%;
+                                white-space: nowrap;
+                            }
+                        }
+                    }
+            }
+            
+        }
+
+        .img_fondo_foto {
+            position: absolute;
+            left: 0;
+            z-index: -2;
+
+            img {
+                top: -3em;
+                width: 100%;
+                animation: rotate 30s linear infinite;
+            }
+
+            @keyframes rotate {
+                from {
+                  transform: rotate(0deg);
+                }
+                to {
+                  transform: rotate(360deg);
+                }
+              }
+        }
+
+        .img_fondo_foto_dos {
+            position: absolute;
+            left: 0;
+            z-index: -2;
+            z-index: 0; width: 60%; top: 22%; left: 20%;
+
+            img {
+                top: -3em;
+                width: 100%;
+                animation: rotates 20s linear infinite;
+            }
+
+            @keyframes rotates {
+                from {
+                  transform: rotate(0deg);
+                }
+                to {
+                  transform: rotate(-360deg);
+                }
+              }
+        }
+
+
+        .foto_jaksin {
+            width: 40%;
+            position: absolute;
+            bottom: 0;
+        }
+
+        .cinta_colum_dos {
+            width: 100%;
+            height: 10%;
+            background: #ffffff;
+            border-top: #000 solid 1px;
+        }
+    }
+
+    .colum_dos {
+        width: 50%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        .titulo_about_me {
+            height: 15%;
+            margin-left: 2em;
+            margin-top: 2em;
+            h4{
+                font-family: monabold;
+                font-size: 50px;
+                font-weight: 800;
+                font-stretch: normal;
+                font-style: normal;
+                line-height: 1;
+                letter-spacing: normal;
+                text-align: left;
+                color: #000;
+            }
+            p{
+                font-family: monaregular;
+                font-size: 13px;
+                font-weight: 300;
+                font-stretch: normal;
+                font-style: normal;
+                line-height: 1;
+                letter-spacing: normal;
+                text-align: left;
+                color: #000;
+            }
+
+        }
+
+        .lista_about_me {
+            display: flex;
+            flex-direction: column;
+            border-top: #000 solid 1px;
+            .item_lista {
+                height: 100%;
+                width: 100%;
+                display: flex;
+                flex-direction: row;
+                border-bottom: #000 solid 1px;
+                .num_item {
+                    border-right: #000 solid 1px;
+                    width: 20%;
+                    font-family: monasemibold;
+                    font-size: 55px;
+                    font-weight: bold;
+                    font-stretch: normal;
+                    font-style: normal;
+                    line-height: 1;
+                    letter-spacing: normal;
+                    text-align: center;
+                    color: #000;
+                }
+
+                .item{
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    width: 80%;
+                    margin-left: 1em;
+                    .titulo_item {
+                        font-family: monasemibold;
+                        font-size: 15px;
+                        font-weight: 500;
+                        font-stretch: normal;
+                        font-style: normal;
+                        line-height: 1;
+                        letter-spacing: normal;
+                        text-align: left;
+                        color: #000;
+                    }
+            
+                    .cont_item {
+                        font-family: monalight;
+                        font-size: 13px;
+                        font-weight: 300;
+                        font-stretch: normal;
+                        font-style: normal;
+                        line-height: 1;
+                        letter-spacing: normal;
+                        text-align: left;
+                        color: #000;
+                    }
+                }
+        
+
+            }
+
+        }
+
+        .cinta_colum_dos {
+            display: flex;
+            width: 100%;
+            height: 10%;
+            background: #ffffff;
+            border-top: #000 solid 1px;
+            position: relative;
+            overflow-x: hidden;
+            align-items: center;
+            .slider_inicio {
+                    width: 100%;
+                    position: absolute;
+                    display: flex;
+                    align-items: start;
+                    flex-shrink: 0;
+                    overflow: hidden;
+                    background: #ffffff;
+
+        
+                    .slide-track {
+                        width: 100%;
+                        -webkit-animation: 10s linear infinite reverse;
+                        animation: 15s linear infinite reverse;
+                        animation-name: scroll1011;
+                        display: flex;
+                        width: 2400px;
+                        align-items: center;
+                        gap: 1px;
+        
+                        .slide {
+                            width: 200px;
+                            display: flex;
+                            align-items: center;
+                            justify-content: center;
+        
+                            p {
+                                padding-top: 10px;
+                                padding-bottom: 10px;
+                                color: #000;
+                                text-align: center;
+                                font-family: monaextrabold;
+                                font-size: 18px;
+                                font-style: normal;
+                                line-height: 106%;
+                                white-space: nowrap;
+                            }
+                        }
+                    }
+                    @keyframes scroll1011 {
+                        0% {
+                            -webkit-transform: translateX(0px);
+                            transform: translateX(0px);
+                        }
+                    
+                        100% {
+                            -webkit-transform: translateX(-200px);
+                            transform: translateX(-400px);
+                        }
+                    }
+            }
+            
+        }
+
+
+    }
+}
